[package]
name = "set-dns-demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# , "blocking","rustls-tls"], default-features = false
[dependencies]
reqwest = { version = "0.11", features = ["json","rustls-tls"], default-features = false }
tokio = { version = "1.10.0", features = ["full"] }
serde_json = "1.0"
crypto2 = { git = "https://github.com/shadowsocks/crypto2.git" }
base64 = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
toml="0.5"

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
codegen-units = 1
